[package]
name = "echo-server-logging-metrics-tracing"
edition = "2021"
version = "0.1.0-alpha.0"

[dependencies]
axum = { features = ["http1", "http2", "json", "matched-path", "tokio"], version = "0.7", default-features = false }
hyper = { version = "1", features = ["http1", "http2", "server"], default-features = false }
bytes = { version = "1.1", default-features = false }
envy = { version = "0.4", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { default-features = false, version = "0.3" }
http-body = { version = "1", default-features = false }
opentelemetry = { version = "0.21", features = ["metrics"], default-features = false }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "rt-tokio"], default-features = false }
opentelemetry_api = { version = "0.20", default-features = false }
opentelemetry-semantic-conventions = { version = "0.13", default-features = false }
opentelemetry-otlp = { version = "0.14.0", features = ["metrics", "tonic", "grpc-tonic", "trace"], default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
serde = { version = "1.*", features = ["serde_derive"], default-features = false }
serde_json = { version = "1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros"], default-features = false }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", features = ["cors", "trace"], default-features = false }
tower-otel-http-metrics = { version = "0.2.1", features = ["axum"], default-features = false }
tracing = { version = "0.1", features = ["attributes"], default-features = false }
tracing-appender = { version = "0.2", default-features = false }
tracing-bunyan-formatter = { version = "0.3", default-features = false }
tracing-opentelemetry = { version = "0.22", features = ["metrics"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["json"], default-features = false }
