[package]
name = "echo-server-logging-metrics-tracing"
edition = "2021"
version = "0.1.0-alpha.1"

[dependencies]
axum = { version = "0.8.4", features = ["http1", "http2", "json", "matched-path", "tokio"], default-features = false }
envy = { version = "0.4", default-features = false }
log = { version = "0.4", features = ["kv"], default-features = false }
opentelemetry = { version = "0.30.0", features = ["metrics", "logs", "trace"], default-features = false }
opentelemetry-appender-tracing = { version = "0.30.1", default-features = false }
opentelemetry-otlp = { version = "0.30.0", features = ["logs", "metrics", "tonic", "grpc-tonic", "trace"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.30.0", default-features = false }
opentelemetry-stdout = { version = "0.30.0", features = ["metrics", "logs", "trace"], default-features = false }
opentelemetry_sdk = { version = "0.30.0", features = ["metrics", "rt-tokio", "logs", "trace"], default-features = false }
serde = { version = "1", features = ["serde_derive"], default-features = false }
serde_json = { version = "1", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal-hook-registry", "signal"], default-features = false }
tower = { version = "0.5.1", default-features = false }
tower-http = { version = "0.6.1", features = ["cors", "trace"], default-features = false }
tower-otel-http-metrics = { version = "0.16.0", features = ["axum"], default-features = false }
tracing = { version = "0.1", features = ["attributes"], default-features = false }
tracing-opentelemetry = { version = "0.31.0", features = ["metrics"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["json"], default-features = false }
